# immunity-python-agent

./: .bandit  .dockerignore  .gitattributes  .gitignore  0.0.9  Dockerfile  Makefile  NOTICE  README copy.md  README.md  Readme.md  SECURITY.md  VERSION  Vagrantfile  deploy.ps1  generate_flowcharts.py  manage.py  pyproject.toml  setup.cfg  setup.py  test_flask.py
.github/workflows/: bandit.yml  build_macos.yml  generate_diagrams.yml  gitleaks.yml  publish.yaml  pylint.yml  release_agent.yml  safety.yml  test_build.yml
.gitverse/workflows/: build-lib.yaml
dev/: urls.py
diagrams/: Client_upload_config_flowchart.txt  Client_upload_context_flowchart.txt  Client_upload_dependencies_flowchart.txt  ImmunityDjangoMiddleware___call___flowchart.txt  classes.dot  packages.dot
immunity_agent/: config.json
immunity_agent/api/: client.py
immunity_agent/call_tree/: __init__.py  call_tree.py  graph_visualizer.py  node.py
immunity_agent/context/: __init__.py  data_builder.py  data_collector.py
immunity_agent/control_flow/: control_flow.py
immunity_agent/middlewares/: base_middleware.py  django_middleware.py  flask_middleware.py
immunity_agent/request/: django_request.py
immunity_agent/response/: django_response.py
immunity_agent_python/: __init__.py
immunity_agent_python/api/: openapi.py
immunity_agent_python/assess/: ctypes_hook.py
immunity_agent_python/cli/: run.py
immunity_agent_python/common/: logger.py
immunity_agent_python/context/: request.py  (+1 more)
polysploit/: django_exploit.py  flask_exploit.py
scripts/: get_python_tag  immunity-ctl
(+30 files in other folders)
