[metadata]
name = immunity_agent_python
version = attr: immunity_agent_python.version.__version__
description = Immunity IAST Agent for Python
long_description = file: README.md
url = https://light-hat.github.io/immunity/
author = light-hat
author_email = l1ghth4t@gmail.com
license = GNU General Public License v3
license_files = file: LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options.entry_points]
console_scripts =
    immunity-ctl = immunity_agent_python.cli:main

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    psutil >= 5.8.0
    requests >= 2.25.1
    setuptools < 81

[options.packages.find]
include = immunity_agent_python*
